Fixing selectUpdate.pug's styling. changing data sent from the backend to allow clipping of text when overflowing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,6 @@ body {
   color: darkslategrey;
   height: 100%;
   overflow-x: hidden;
-
 }
 .item-description-wrapper {
   color: darkslategrey;
@@ -84,11 +83,10 @@ body {
 }
 .manga-cat-text {
   display: block;
-  font-weight: 100;  
+  font-weight: 100;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-
 }
 #manga-cat-spacer {
   padding-right: 10px;
@@ -144,23 +142,23 @@ nav {
   height: 25px;
   color: darkslategrey;
 }
-.create-form form input[type=submit] {
+.create-form form input[type="submit"] {
   background-color: darkslategrey;
   color: whitesmoke;
   border-radius: 1rem;
   padding: 5px 0px;
 }
-.create-form form input[type=submit]:hover {
+.create-form form input[type="submit"]:hover {
   cursor: pointer;
   background-color: whitesmoke;
   color: darkslategrey;
   border-color: darkslategray;
-} 
+}
 .rec-container {
   width: 50%;
   transform: translateX(0%) translateY(-4%);
   position: absolute;
-  background-color: rgba(47,79,79, 0.8);
+  background-color: rgba(47, 79, 79, 0.8);
   color: white;
   display: flex;
   flex-direction: column;
@@ -169,7 +167,6 @@ nav {
   padding-bottom: 10px;
   z-index: 999;
 }
-
 
 .rec-card {
   display: flex;
@@ -182,7 +179,7 @@ nav {
 
 .rec-card:hover {
   cursor: pointer;
-  background-color: rgba(47,79,79,0.8);
+  background-color: rgba(47, 79, 79, 0.8);
 }
 .rec-card h3 {
   width: 30%;
@@ -216,11 +213,11 @@ nav {
 }
 .category-list-wrapper {
   display: flex;
-  justify-content: flex-start; 
+  justify-content: flex-start;
   align-content: flex-start;
   flex-direction: row;
   flex-wrap: wrap;
-  width:80%;
+  width: 80%;
   height: 100%;
   margin: 0 auto;
 }
@@ -232,13 +229,13 @@ nav {
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  gap: 20px;  
+  gap: 20px;
   width: 100%;
   color: darkslategrey;
 }
 
 .update-items-wrapper {
-  display:flex; 
+  display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
@@ -274,14 +271,14 @@ nav {
   width: 60%;
 }
 
-.update-item-field input[type=submit] {
+.update-item-field input[type="submit"] {
   background-color: darkslategrey;
   color: whitesmoke;
   border-radius: 1rem;
   padding: 5px;
 }
 
-.update-item-field input[type=submit]:hover {
+.update-item-field input[type="submit"]:hover {
   background-color: whitesmoke;
   color: darkslategrey;
   border-color: darkslategrey;
@@ -348,7 +345,7 @@ nav {
 }
 
 .card-img {
-  width:  100%;
+  width: 100%;
   height: auto;
 }
 .item-information {
